@@ -15,7 +15,6 @@ import com.smartstay.smartstay.ennum.PaymentStatus;
 import com.smartstay.smartstay.ennum.*;
 import com.smartstay.smartstay.payloads.invoice.RefundInvoice;
 import com.smartstay.smartstay.payloads.transactions.AddPayment;
-import com.smartstay.smartstay.dto.transaction.BankCollectionProjection;
 import com.smartstay.smartstay.repositories.TransactionV1Repository;
 import com.smartstay.smartstay.responses.invoices.AccountDetails;
 import com.smartstay.smartstay.responses.invoices.CustomerInfo;
@@ -27,7 +26,6 @@ import com.smartstay.smartstay.responses.receiptForReport.ReceiptReportResponse;
 import com.smartstay.smartstay.responses.expenseForReport.ExpenseReportResponse;
 import com.smartstay.smartstay.repositories.ExpensesRepository;
 import com.smartstay.smartstay.util.Utils;
-import lombok.extern.java.Log;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.http.HttpStatus;
@@ -196,7 +194,7 @@ public class TransactionService {
         int response = paymentSummaryService.addPayment(summary);
 
         if (response == 1) {
-            //dont have to add the amount. For booking invoice is already created.
+            // dont have to add the amount. For booking invoice is already created.
             invoiceService.recordPayment(invoiceId, PaymentStatus.PAID.name(), 0);
 
             TransactionDto transaction = new TransactionDto(payment.bankId(),
@@ -913,180 +911,176 @@ public class TransactionService {
         List<TransactionV1> transactions = transactionRespository.findTransactionsByFiltersNoJoin(hostelId, startDate,
                 endDate, paymentStatus, limit, offset);
 
-        int totalTransactions = transactionRespository.countByFiltersNoJoin(hostelId, startDate, endDate,
-                paymentStatus);
-        int totalPages = (int) Math.ceil((double) totalTransactions / size);
-
-        Double totalCollection = transactionRespository.findTotalCollectionByFiltersNoJoin(hostelId, startDate, endDate,
-                paymentStatus);
-
-        List<BankCollectionProjection> highestCollectingBankData = transactionRespository
-                .findHighestCollectingBankNoJoin(hostelId, startDate, endDate, paymentStatus);
-
-        ReceiptReportResponse.BankCollectionInfo bankInfo = new com.smartstay.smartstay.responses.receiptForReport.ReceiptReportResponse.BankCollectionInfo();
-
-        if (highestCollectingBankData != null && !highestCollectingBankData.isEmpty()) {
-            BankCollectionProjection data = highestCollectingBankData.get(0);
-            String bankId = data.getBankId();
-            Double amount = data.getTotalAmount();
-            bankInfo.setTotalAmount(amount);
-
-            BankingV1 bank = bankingService.getBankDetails(bankId);
-            if (bank != null) {
-                bankInfo.setBankName(bank.getAccountHolderName() + "-" + bank.getBankName());
-            } else {
-                bankInfo.setBankName("Unknown Bank");
-            }
-        }
+        Double totalAmountSummary = invoiceService.sumTotalAmountByHostelIdAndDateRangeExcludingSettlement(hostelId,
+                InvoiceType.SETTLEMENT.name(), startDate, endDate);
+        Double receivedAmountSummary = transactionRespository.sumPaidAmountByHostelIdAndDateRange(hostelId, startDate,
+                endDate);
 
         List<String> customerIds = transactions.stream().map(TransactionV1::getCustomerId).filter(Objects::nonNull)
-                .distinct().collect(Collectors.toList());
+                .distinct().toList();
         List<String> bankIds = transactions.stream().map(TransactionV1::getBankId).filter(Objects::nonNull).distinct()
                 .toList();
+        List<String> invoiceIds = transactions.stream().map(TransactionV1::getInvoiceId).filter(Objects::nonNull)
+                .distinct().toList();
+        List<String> userIds = transactions.stream().map(TransactionV1::getCreatedBy).filter(Objects::nonNull)
+                .distinct()
+                .toList();
 
-        List<Customers> customers = new ArrayList<>();
+        Map<String, Customers> customerMap = new HashMap<>();
         if (!customerIds.isEmpty()) {
-            customers = customersService.getCustomerDetails(customerIds);
+            customersService.getCustomerDetails(customerIds).forEach(c -> customerMap.put(c.getCustomerId(), c));
         }
 
-        Map<String, String> customerNameMap = customers.stream()
-                .collect(Collectors.toMap(Customers::getCustomerId, c -> {
-                    String name = c.getFirstName();
-                    if (c.getLastName() != null)
-                        name += " " + c.getLastName();
-                    return name;
-                }, (existing, replacement) -> existing));
-
-        Map<String, String> bankNameMap = new HashMap<>();
+        Map<String, BankingV1> bankMap = new HashMap<>();
         for (String bId : bankIds) {
             BankingV1 b = bankingService.getBankDetails(bId);
             if (b != null) {
-                String bName = b.getAccountHolderName() == null ? b.getBankName()
-                        : b.getAccountHolderName() + "-" + b.getBankName();
-                bankNameMap.put(bId, bName);
+                bankMap.put(bId, b);
             }
+        }
+
+        Map<String, InvoicesV1> invoiceMap = new HashMap<>();
+        if (!invoiceIds.isEmpty()) {
+            invoiceService.findByInvoiceIdIn(invoiceIds).forEach(i -> invoiceMap.put(i.getInvoiceId(), i));
+        }
+
+        Map<String, Users> userMap = new HashMap<>();
+        if (!userIds.isEmpty()) {
+            usersService.findAllUsersFromUserId(userIds).forEach(u -> userMap.put(u.getUserId(), u));
         }
 
         List<ReceiptReportResponse.ReceiptDetail> receiptDetails = transactions
                 .stream().map(t -> {
-                    return ReceiptReportResponse.ReceiptDetail
-                            .builder()
-                            .transactionId(t.getTransactionId())
-                            .customerName(customerNameMap.getOrDefault(t.getCustomerId(), "Unknown"))
-                            .paymentDate(Utils.dateToString(t.getPaidAt()))
-                            .amount(t.getPaidAmount())
-                            .bankName(bankNameMap.getOrDefault(t.getBankId(), "Unknown"))
-                            .transactionType(t.getType())
-                            .transactionReferenceId(t.getTransactionReferenceId())
-                            .referenceNumber(t.getReferenceNumber())
-                            .status(t.getStatus())
-                            .build();
-                }).collect(Collectors.toList());
+                    Customers c = customerMap.get(t.getCustomerId());
+                    InvoicesV1 inv = invoiceMap.get(t.getInvoiceId());
+                    Users creator = userMap.get(t.getCreatedBy());
+                    BankingV1 b = bankMap.get(t.getBankId());
 
-        ReceiptReportResponse.BasicReceiptDetails basicDetails = com.smartstay.smartstay.responses.receiptForReport.ReceiptReportResponse.BasicReceiptDetails
-                .builder()
-                .totalReceipts(totalTransactions)
-                .startDate(startDate != null ? Utils.dateToString(startDate) : null)
-                .endDate(endDate != null ? Utils.dateToString(endDate) : null)
-                .build();
+                    String bedName = "";
+                    String roomName = "";
+                    String floorName = "";
 
-        return ReceiptReportResponse.builder()
-                .totalRentCollected(totalCollection != null ? totalCollection : 0.0)
-                .highestCollectingBank(bankInfo)
-                .currentPage(page)
-                .totalPages(totalPages)
-                .basicDetails(basicDetails)
-                .receipts(receiptDetails)
-                .build();
-    }
-
-        public ExpenseReportResponse getExpenseReports (String hostelId, Date startDate, Date endDate,int page, int size)
-        {
-            int offset = page * size;
-            int limit = size;
-
-            Double totalIncome = transactionRespository.sumIncomeByHostelIdAndDateRange(hostelId, startDate, endDate);
-            Double totalRefunds = transactionRespository.sumRefundByHostelIdAndDateRange(hostelId, startDate, endDate);
-            Double totalHostelExpenses = expensesRepository.sumAmountByHostelIdAndDateRange(hostelId, startDate, endDate);
-
-            double totalExpenses = totalHostelExpenses + totalRefunds;
-            double balanceAmount = totalIncome - totalExpenses;
-            double profit = balanceAmount > 0 ? balanceAmount : 0;
-            double loss = balanceAmount < 0 ? Math.abs(balanceAmount) : 0;
-
-            // Paginated Expenses
-            List<ExpensesV1> expensesList = expensesRepository.findExpensesByFiltersNoJoin(hostelId, startDate, endDate, limit, offset);
-            int totalExpensesCount = expensesRepository.countByHostelIdAndDateRange(hostelId, startDate, endDate);
-            int totalPages = (int) Math.ceil((double) totalExpensesCount / size);
-
-            List<ExpenseReportResponse.ExpenseDetail> details = expensesList.stream().map(e -> {
-                String categoryName = "Unknown";
-                String subCategoryName = "Unknown";
-                String vendorName = "Unknown";
-                String bankName = "Unknown";
-
-                // Resolve names (no joins used)
-                try {
-                    if (e.getCategoryId() != null) {
-                        // Assuming a simple way to get name. If service doesn't have it, we'd need another repo or method.
-                        // For now, let's assume we can fetch it.
-                        com.smartstay.smartstay.dao.ExpenseCategory cat = expenseCategoryService.getExpenseCategoryById(e.getCategoryId());
-                        if (cat != null) {
-                            categoryName = cat.getCategoryName();
-                            if (e.getSubCategoryId() != null && cat.getListSubCategories() != null) {
-                                subCategoryName = cat.getListSubCategories().stream()
-                                        .filter(s -> s.getSubCategoryId().equals(e.getSubCategoryId()))
-                                        .map(com.smartstay.smartstay.dao.ExpenseSubCategory::getSubCategoryName)
-                                        .findFirst().orElse("Unknown");
+                    if (t.getCustomerId() != null) {
+                        CustomersBedHistory bedHistory = customersBedHistoryService
+                                .getCustomerBedByStartDate(t.getCustomerId(), t.getPaidAt(), t.getPaidAt());
+                        if (bedHistory != null) {
+                            BedDetails bedDetails = bedService.getBedDetails(bedHistory.getBedId());
+                            if (bedDetails != null) {
+                                bedName = bedDetails.getBedName();
+                                roomName = bedDetails.getRoomName();
+                                floorName = bedDetails.getFloorName();
                             }
                         }
                     }
-                    if (e.getVendorId() != null) {
-                        com.smartstay.smartstay.dao.VendorV1 vendor = vendorService.getVendorObjectById(Integer.parseInt(e.getVendorId()));
-                        if (vendor != null) {
-                            vendorName = vendor.getBusinessName() != null ? vendor.getBusinessName() : vendor.getFirstName();
-                        }
-                    }
-                    if (e.getBankId() != null) {
-                        BankingV1 bank = bankingService.getBankDetails(e.getBankId());
-                        if (bank != null) {
-                            bankName = bank.getBankName();
-                        }
-                    }
-                } catch (Exception ex) {
-                    // Keep defaults if error
-                }
 
-                return ExpenseReportResponse.ExpenseDetail.builder()
-                        .expenseId(e.getExpenseId())
-                        .expenseNumber(e.getExpenseNumber())
-                        .categoryName(categoryName)
-                        .subCategoryName(subCategoryName)
-                        .description(e.getDescription())
-                        .amount(e.getTransactionAmount())
-                        .transactionDate(Utils.dateToString(e.getTransactionDate()))
-                        .bankName(bankName)
-                        .vendorName(vendorName)
-                        .build();
-            }).collect(Collectors.toList());
+                    return ReceiptReportResponse.ReceiptDetail
+                            .builder()
+                            .receiptNo(t.getTransactionReferenceId())
+                            .Date(Utils.dateToString(t.getPaidAt()))
+                            .type(t.getType())
+                            .amount(t.getPaidAmount())
+                            .paymentMade(t.getPaidAmount())
+                            .collectedBy(creator != null
+                                    ? (creator.getFirstName()
+                                            + (creator.getLastName() != null ? " " + creator.getLastName() : ""))
+                                    : "Unknown")
+                            .bankAccount(b != null ? (b.getAccountHolderName() + "-" + b.getBankName()) : "Unknown")
+                            .customerName(c != null
+                                    ? (c.getFirstName() + (c.getLastName() != null ? " " + c.getLastName() : ""))
+                                    : "Unknown")
+                            .bed(bedName)
+                            .room(roomName)
+                            .floor(floorName)
+                            .invoiceNumber(inv != null ? inv.getInvoiceNumber() : "")
+                            .build();
+                }).collect(Collectors.toList());
 
-            ExpenseReportResponse.ExpenseSummary summary = ExpenseReportResponse.ExpenseSummary.builder()
-                    .totalCount(totalExpensesCount)
-                    .startDate(startDate != null ? Utils.dateToString(startDate) : null)
-                    .endDate(endDate != null ? Utils.dateToString(endDate) : null)
-                    .build();
+        return ReceiptReportResponse.builder()
+                .startDate(startDate != null ? Utils.dateToString(startDate) : null)
+                .endDate(endDate != null ? Utils.dateToString(endDate) : null)
+                .totalInvoiceAmount(totalAmountSummary != null ? totalAmountSummary : 0.0)
+                .receivedAmount(receivedAmountSummary != null ? receivedAmountSummary : 0.0)
+                .receiptsList(receiptDetails)
+                .hostelId(hostelId)
+                .build();
+    }
 
-            return ExpenseReportResponse.builder()
-                    .totalExpenses(totalExpenses)
-                    .balanceAmount(balanceAmount)
-                    .profit(profit)
-                    .loss(loss)
-                    .currentPage(page)
-                    .totalPages(totalPages)
-                    .expenseSummary(summary)
-                    .expenses(details)
-                    .build();
+    public ExpenseReportResponse getExpenseReports(String hostelId, Date startDate, Date endDate, int page, int size) {
+        int offset = page * size;
+        int limit = size;
+
+        Double totalRefunds = transactionRespository.sumRefundByHostelIdAndDateRange(hostelId, startDate, endDate);
+        Double totalHostelExpenses = expensesRepository.sumAmountByHostelIdAndDateRange(hostelId, startDate, endDate);
+        double totalAmount = (totalHostelExpenses != null ? totalHostelExpenses : 0.0)
+                + (totalRefunds != null ? totalRefunds : 0.0);
+
+        int totalExpensesCount = expensesRepository.countByHostelIdAndDateRange(hostelId, startDate, endDate);
+
+        List<ExpensesV1> expensesList = expensesRepository.findExpensesByFilters(hostelId, startDate, endDate,
+                limit, offset);
+
+        List<Long> categoryIds = expensesList.stream().map(ExpensesV1::getCategoryId).filter(Objects::nonNull)
+                .distinct().toList();
+        List<String> bankIds = expensesList.stream().map(ExpensesV1::getBankId).filter(Objects::nonNull).distinct()
+                .toList();
+
+        Map<Long, ExpenseCategory> categoryMap = new HashMap<>();
+        for (Long cId : categoryIds) {
+            ExpenseCategory cat = expenseCategoryService.getExpenseCategoryById(cId);
+            if (cat != null) {
+                categoryMap.put(cId, cat);
+            }
         }
 
+        Map<String, BankingV1> bankMap = new HashMap<>();
+        for (String bId : bankIds) {
+            BankingV1 b = bankingService.getBankDetails(bId);
+            if (b != null) {
+                bankMap.put(bId, b);
+            }
+        }
+
+        List<ExpenseReportResponse.ExpenseDetail> details = expensesList.stream().map(e -> {
+            String categoryName = "Unknown";
+            String subCategoryName = "Unknown";
+            String bankName = "Unknown";
+
+            ExpenseCategory cat = categoryMap.get(e.getCategoryId());
+            if (cat != null) {
+                categoryName = cat.getCategoryName();
+                if (e.getSubCategoryId() != null && cat.getListSubCategories() != null) {
+                    subCategoryName = cat.getListSubCategories().stream()
+                            .filter(s -> s.getSubCategoryId().equals(e.getSubCategoryId()))
+                            .map(ExpenseSubCategory::getSubCategoryName)
+                            .findFirst().orElse("Unknown");
+                }
+            }
+
+            BankingV1 b = bankMap.get(e.getBankId());
+            if (b != null) {
+                bankName = b.getBankName();
+            }
+
+            return ExpenseReportResponse.ExpenseDetail.builder()
+                    .date(Utils.dateToString(e.getTransactionDate()))
+                    .expenseCategory(categoryName)
+                    .expenseSubCategory(subCategoryName)
+                    .description(e.getDescription())
+                    .counts(e.getUnitCount() != null ? e.getUnitCount() : 1)
+                    .assetsName("")
+                    .vendorName("")
+                    .account(bankName)
+                    .build();
+        }).collect(Collectors.toList());
+
+        return ExpenseReportResponse.builder()
+                .hostelId(hostelId)
+                .startDate(startDate != null ? Utils.dateToString(startDate) : null)
+                .endDate(endDate != null ? Utils.dateToString(endDate) : null)
+                .totalExpenses(totalExpensesCount)
+                .totalAmount(totalAmount)
+                .expenseLists(details)
+                .build();
+    }
 
 }
